# grok-build-local

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: release.yml
crates/codegen/axon-acp-lib/: Cargo.toml
crates/codegen/axon-acp-lib/src/: normalize.rs
crates/codegen/axon-agent/: Cargo.toml  README.md
crates/codegen/axon-agent-lifecycle/: Cargo.toml
crates/codegen/axon-agent-lifecycle/src/: lib.rs
crates/codegen/axon-agent/src/: agent.rs  builder.rs  config.rs  discovery.rs  lib.rs  repo.rs  system_reminder.rs
crates/codegen/axon-agent/templates/: prompt.md
crates/codegen/axon-announcements/: Cargo.toml  generate.sh
crates/codegen/axon-announcements/src/: lib.rs
crates/codegen/axon-auth/: Cargo.toml
crates/codegen/axon-auth/src/: auth_provider.rs  lib.rs  visibility.rs
crates/codegen/axon-chat-state/: Cargo.toml
crates/codegen/axon-chat-state/src/: commands.rs  compaction_mode.rs  compaction_transcript.rs  compaction_utils.rs  conversation_util.rs  handle.rs  lib.rs  persistence.rs  types.rs  usage.rs
crates/codegen/axon-chat-state/src/actor/: mod.rs  mutations.rs  queries.rs  request_builder.rs  state.rs  tests.rs
crates/codegen/axon-codebase-graph/: Cargo.toml
crates/codegen/axon-codebase-graph/src/: index_manager.rs  interner.rs  lib.rs
crates/codegen/axon-codebase-graph/tests/: incremental_memory.rs  memory_integration.rs
crates/codegen/axon-config/: Cargo.toml
crates/codegen/axon-config-types/: Cargo.toml
crates/codegen/axon-config-types/src/: flags.rs  lib.rs  mcp.rs  memory.rs  permission.rs  pool.rs
crates/codegen/axon-config/src/: lib.rs  loader.rs  macos_managed.rs  managed_cache.rs  paths.rs  shell.rs  validation.rs
crates/codegen/axon-crash-handler/: Cargo.toml  README.md
crates/codegen/axon-crash-handler/src/: handler.rs  lib.rs  symbolicate.rs
crates/codegen/axon-env/: Cargo.toml
crates/codegen/axon-env/src/: lib.rs
crates/codegen/axon-fast-worktree/: Cargo.toml
crates/codegen/axon-file-utils/: Cargo.toml
crates/codegen/axon-fsnotify/: Cargo.toml
crates/codegen/axon-gix-status/: Cargo.toml
crates/codegen/axon-hooks/: Cargo.toml
crates/codegen/axon-hooks-plugins-types/: Cargo.toml
crates/codegen/axon-http/: Cargo.toml
crates/codegen/axon-http/src/: lib.rs
crates/codegen/axon-hunk-tracker/: Cargo.toml
crates/codegen/axon-markdown/: Cargo.toml
crates/codegen/axon-markdown-core/: Cargo.toml
crates/codegen/axon-mcp/: Cargo.toml
crates/codegen/axon-memory/: Cargo.toml
crates/codegen/axon-mermaid/: Cargo.toml
crates/codegen/axon-models/: Cargo.toml
crates/codegen/axon-models/src/: lib.rs
crates/codegen/axon-pager/: Cargo.toml  README.md
crates/codegen/axon-pager-bin/: Cargo.toml  build.rs
crates/codegen/axon-pager-bin/src/: main.rs
crates/codegen/axon-pager-minimal/: Cargo.toml
crates/codegen/axon-pager-pty-harness/: Cargo.toml
crates/codegen/axon-pager-render/: Cargo.toml
crates/codegen/axon-paths/: Cargo.toml
crates/codegen/axon-plugin-marketplace/: Cargo.toml
crates/codegen/axon-plugin-marketplace/src/: catalog.rs  config.rs  git.rs  index.rs  install_resolve.rs  installer.rs  scanner.rs  types.rs
crates/codegen/axon-prompt-queue/: Cargo.toml
crates/codegen/axon-prompt-queue/src/: lib.rs
crates/codegen/axon-ratatui-inline/: Cargo.toml
crates/codegen/axon-ratatui-textarea/: Cargo.toml
crates/codegen/axon-sampler/: Cargo.toml
crates/codegen/axon-sampling-types/: Cargo.toml
crates/codegen/axon-sampling-types/src/: conversation.rs  error.rs  lib.rs  types.rs
crates/codegen/axon-sandbox/: Cargo.toml
crates/codegen/axon-secrets/: Cargo.toml
crates/codegen/axon-shared/: Cargo.toml
crates/codegen/axon-shell/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/codegen/axon-shell-base/: Cargo.toml
crates/codegen/axon-shell-base/src/: env.rs  lib.rs
crates/codegen/axon-shell-base/src/util/: changelog.rs  grok_home.rs  mod.rs  secure_file.rs  tips.rs  uname.rs
crates/codegen/axon-shell-session-support/: Cargo.toml
crates/codegen/axon-shell-session-support/src/: lib.rs  managed_mcp.rs
crates/codegen/axon-sqlite-journal/: Cargo.toml
crates/codegen/axon-subagent-resolution/: Cargo.toml
crates/codegen/axon-subagent-resolution/src/: config.rs  context.rs  lib.rs  overrides.rs  resume.rs  types.rs
crates/codegen/axon-system-power/: Cargo.toml
crates/codegen/axon-telemetry/: Cargo.toml
crates/codegen/axon-test-support/: Cargo.toml  README.md
crates/codegen/axon-token-estimation/: Cargo.toml
crates/codegen/axon-tools/: Cargo.toml  THIRD_PARTY_NOTICES.md  build.rs
crates/codegen/axon-tools-api/: Cargo.toml  build.rs
crates/codegen/axon-tracing-macros/: Cargo.toml
crates/codegen/axon-tty-utils/: Cargo.toml
crates/codegen/axon-update/: Cargo.toml
crates/codegen/axon-version/: Cargo.toml  build.rs
crates/codegen/axon-voice/: Cargo.toml
crates/codegen/axon-workspace/: Cargo.toml
crates/codegen/axon-workspace-client/: Cargo.toml
crates/codegen/axon-workspace-client/src/: lib.rs
crates/codegen/axon-workspace-types/: Cargo.toml
crates/common/axon-circuit-breaker/: Cargo.toml
crates/common/axon-compaction/: Cargo.toml
crates/common/axon-computer-hub-core/: Cargo.toml
crates/common/axon-computer-hub-core/src/: inner.rs  local.rs  registry.rs  remote.rs  resolver.rs  transport.rs
crates/common/axon-computer-hub-core/tests/: compound_resolver.rs  inner_dispatch.rs  internal_error_detail.rs  local_transport.rs  remote_proxy.rs  tool_registry.rs  transport_trait.rs  workspace_unavailable.rs
crates/common/axon-computer-hub-mcp-adapter/: Cargo.toml
crates/common/axon-computer-hub-mcp-adapter/src/: bridge.rs  lib.rs
crates/common/axon-computer-hub-sdk/: Cargo.toml
crates/common/axon-interjection-core/: Cargo.toml
crates/common/axon-test-utils/: Cargo.toml
crates/common/axon-tool-protocol/: Cargo.toml
crates/common/axon-tool-runtime/: Cargo.toml
crates/common/axon-tool-types/: Cargo.toml
crates/common/axon-tracing/: Cargo.toml
prod/mc/cli-chat-proxy-types/: Cargo.toml
(+1337 files in other folders)
