[package]
license = "Apache-2.0"
name = "axon-chat-state"
version = "0.1.0"
edition.workspace = true
description = "Actor-based chat state management for Axon agents"

[features]
default-bazel = []

[dependencies]
indexmap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
axon-compaction = { path = "../../common/axon-compaction" }
axon-sampling-types = { path = "../axon-sampling-types" }
axon-token-estimation = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
