[package]
license = "Apache-2.0"
name = "axon-config-types"
version = "0.1.0"
edition.workspace = true
description = "Leaf configuration value types for the Axon CLI, extracted from axon-shell for dependency inversion."

[dependencies]
agent-client-protocol = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
axon-announcements = { workspace = true }
axon-config = { workspace = true }
axon-mcp = { workspace = true }

[features]
default-bazel = []

[lints]
workspace = true
