[package]
edition.workspace = true
license = "Apache-2.0"
name = "axon-prompt-queue"
version = "0.1.0"
description = "Shared prompt-queue wire types for axon-shell and axon-pager"

[dependencies]
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
