[package]
license = "Apache-2.0"
name = "axon-subagent-resolution"
version = "0.1.0"
edition.workspace = true
description = "Subagent configuration resolution: merges persona, role, and spawn-time overrides into a resolved spec"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axon-sampling-types = { path = "../axon-sampling-types" }
axon-tools = { path = "../axon-tools" }
axon-tool-types.workspace = true
# TODO(phase2): add these when resolve_subagent_spec() composition is implemented:
# axon-agent = { path = "../axon-agent" }  # AgentDefinition lookup
# axon-fast-worktree = { path = "../axon-fast-worktree" }  # worktree creation

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
