[package]
license = "Apache-2.0"
name = "axon-computer-hub-mcp-adapter"
version = "0.1.0"
edition.workspace = true
description = "Bridge between MCP servers and the Axon Computer Hub, registering MCP-discovered tools as native hub tools."

[features]
metrics = ["dep:prometheus"]

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
prometheus = { workspace = true, optional = true }

axon-tool-protocol = { workspace = true }
axon-tool-runtime = { workspace = true }
axon-tool-types = { workspace = true }
axon-computer-hub-sdk = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
futures = { workspace = true }

[lints]
workspace = true
